# clawlexa

./: .gitignore  CLAUDE.md  README.md  SPEC.md  task_ideas.md
.github/workflows/: ci.yml
bridge/: README.md  pyproject.toml  requirements.txt
bridge/clawlexa_bridge/: __init__.py  __main__.py  audio.py  conversation.py  discovery.py  hub.py  mcp_server.py  protocol.py  server.py  stt.py  tts.py  vad.py
bridge/tests/: test_audio.py  test_conversation.py  test_discovery.py  test_hub.py  test_mcp_integration.py  test_protocol.py  test_server.py  test_vad.py  test_voice_agent.py
bridge/tools/: crab_parade.py  mcp_demo.py  voice_agent.py
docs/: connect-your-agent.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.qemu
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_version.c  audio.c  audio_tone.c  display.c  idf_component.yml  main.c  mic.c  mic_gate.c  mic_sample.c  st77916_variant.c  touch.c  touch_geom.c  wake_detector.cc  wake_gate.c  wav.c  wifi.c  ws.c
firmware/main/crab_icons/: crab_error.c  crab_idle.c  crab_listening.c  crab_speaking.c  crab_thinking.c
firmware/main/include/: app_version.h  audio.h  audio_tone.h  board.h  crab_icons.h  display.h  mic.h  mic_gate.h  mic_sample.h  st77916_variant.h  st77916_waveshare_init.h  touch.h  touch_geom.h  wake_detector.h  wake_gate.h  wav.h  wifi.h  ws.h
firmware/main/wake_models/: README.md
firmware/tests/: README.md
firmware/tests/host/: CMakeLists.txt  test_app_version.c  test_audio_tone.c  test_display_sequence.c  test_mic_gate.c  test_mic_sample.c  test_runner.c  test_st77916_variant.c  test_touch_geom.c  test_touch_sequence.c  test_wake_gate.c  test_wav.c
firmware/tests/host/fakes/: fake_crab_icons.c  fake_idf.c  fake_idf.h
firmware/tests/host/fakes/driver/: ledc.h
firmware/tests/pytest/: conftest.py  pytest.ini  requirements.txt  test_audio.py  test_boot.py  test_display.py
firmware/tools/: capture_mic.py  process_crabs.py
hardware/: PINOUT.md
training/: README.md
