[project]
name = "clawlexa-bridge"
version = "0.1.0"
description = "Host-side bridge between the clawlexa ESP32 device and an MCP agent."
requires-python = ">=3.10"
dependencies = ["websockets>=12,<14", "faster-whisper>=1.0", "piper-tts>=1.4", "mcp>=1.2"]

[project.optional-dependencies]
dev = ["pytest>=8"]
# For tools/voice_agent.py's default warm-session brain (also needs a Claude Code
# CLI >= 2.0 on PATH or via --claude-cli). Optional: the bridge core never imports it.
voice = ["claude-agent-sdk>=0.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
